--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 	<script src='https://code.jquery.com/jquery-2.1.3.min.js'></script>
 	<script type='text/javascript' src='http://code.jquery.com/ui/1.11.4/jquery-ui.js'></script>
 	<script type='text/javascript' src='js/test.js'></script>
+	<script type='text/javascript' src='js/generator.js'></script>
 
 </body>
 </html>
