collapse works within minor errors

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 	<div id='datafield' class='container'>
 		<div class='row'>
 			<div class='coll col-sm-1'> 
-				<a data-toggle='collapse' href='#collapsediv'> <span class="glyphicon glyphicon-triangle-right"></span>
-			</div>	
+				<a data-toggle='collapse' href='#collapsediv'> <span class="glyphicon glyphicon-triangle-right" id="collicon"></span>
+				</a>
+			</div>
 			<div class='col-sm-2'>
 				<select class='datatype form-control '>
 					<option selected disabled hidden value=''>Data type</option>
