architecture mostly done, need to test, now can add rows and inputs

--- a/test.html
+++ b/test.html
@@ -2,14 +2,18 @@
 <html>
 <head>
   <title>test</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-  <button id="testButton">test test</button>
+  <button id="addRowButton">add row</button>
+  <button id="genButton">generate</button>
   <script src="js/jquery-2.1.3.min.js"></script>
   <script src="js/view.js"></script>
   <script src="js/model/Input.js"></script>
   <script src="js/model/Range.js"></script>
-  <script src="js/model/Number.js"></script>
+  <script src="js/model/NumberType.js"></script>
+  <script src="js/model/Block.js"></script>
+  <script src="js/model/doc.js"></script>
   <script src="js/controller.js"></script>
   
   <script>
