codes of new UI design

--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<link rel='stylesheet' href='https://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
 	<link rel='stylesheet' href='css/bootstrap-social.css'>
 	<link rel='stylesheet' href='css/bootstrap-theme.css'>
@@ -186,6 +187,8 @@
 				Google+
 			</a>
 		</span>
+		© 2015 Datagopro, Group 11 CP3101B, NUS 
+
 	</p>
 	<div id='tablecontainer'> 
 		<table id='ascii'>
