--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 	<link href="css/tabcontent.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-61563497-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
 	<div id='banner'>
 		<img src="img/logo2.png">
 		<div id="side-btn"class='btn-group'>
@@ -193,10 +202,12 @@
 		    </div>
 		    <div id="string" class="container popup">
 		    	<div class="row">
-		    		<div class='col-sm-6'>
+		    		<div class='col-sm-5'>
 						<input class='stringlength form-control' type='text' placeholder='String length'>
 					</div>
-
+					<div class='col-sm-1'>
+						<i class="fa fa-question-circle fa-2x" title="[String length] specifies the length of this long string."></i>
+					</div>
 					<div class='col-sm-6'>
 						<select class='choosecharset form-control'>
 							<option value='' hidden disabled selected>Charset</option>
@@ -206,21 +217,31 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class='col-sm-6'>
+					<div class='col-sm-5'>
 						<input class='linelength form-control' type='text' placeholder='Line length'>
 					</div>
-
-					<div class='col-sm-6'>
+					<div class='col-sm-1'>
+						<i class="fa fa-question-circle fa-2x" title="[Line length] specifies the length of each line in this long string."></i>
+					</div>
+					<div class='col-sm-5'>
 						<input class='linebreak form-control' type='text' placeholder='Line break'>
+					</div>
+					<div class='col-sm-1'>
+						<i class="fa fa-question-circle fa-2x" title="Each line ends with [Line break]."></i>
 					</div>
 				</div>
 				<div class="row">
-					<div class='col-sm-6'>
+					<div class='col-sm-5'>
 						<input class='wordlength form-control' type='text' placeholder='Word length'>
 					</div>
-
-					<div class='col-sm-6'>
+					<div class='col-sm-1'>
+						<i class="fa fa-question-circle fa-2x" title="[Word length] specifies the length of each word."></i>
+					</div>
+					<div class='col-sm-5'>
 						<input class='wordbreak form-control' type='text' placeholder='Word break'>
+					</div>
+					<div class='col-sm-1'>
+						<i class="fa fa-question-circle fa-2x" title="Each word ends with [Word break]."></i>
 					</div>
 				</div>
 				<div class="row">
@@ -332,5 +353,6 @@
 		}
 	});
 </script>
+
 </body>
 </html>
