Generate connected graph

--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
 	<script src='js/popup.js'></script>
 	<script src='js/popupController.js'></script>
 	<script src="js/tabcontent.js" type="text/javascript"></script>
+	<script src='js/generator.js'></script>
 <script>
     $(function(){
 	    $("#nav a").click(function(e){
