--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 	<link rel='stylesheet' href='css/bootstrap-social.css'>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="css/tabcontent.css" rel="stylesheet" type="text/css">
+	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700' rel='stylesheet' type='text/css'>
+	<style></style>
 </head>
 <body>
-	<script>
+	 <script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -20,14 +22,12 @@
 	</script>
 	<div id='banner'>
 		<img src="img/logo2.png">
-		<div id="side-btn"class='btn-group'>
-			<button type='button' class='btn btn-default'>Login</button>
-			<button type='button' class='btn btn-default'>Contacts</button>
-			<button type='button' class='btn btn-default'>Help</button>
-		</div>
 		<ol id="nav" class="breadcrumb">
 		  <li class="active"><a data-target="#editor">New Data</a></li>
-		  <li><a data-target="#timeline">Past Input</a></li>
+		  <li><a data-target="#timeline">My Input</a></li>
+		  <li><a data-target="#popular">Popular Input</a></li>
+		  <li><a data-target="#help">Help</a></li>
+		  <li><a data-target="#loginwindow">Login</a><li>
 		</ol> 
 	</div>
 	<div id="mainbody">
@@ -299,60 +299,10 @@
 	</div>
 	<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/layout.js"></script>
 	<script src='js/popup.js'></script>
 	<script src='js/popupController.js'></script>
 	<script src="js/tabcontent.js" type="text/javascript"></script>
-<script>
-    $(function(){
-	    $("#nav a").click(function(e){
-	        e.preventDefault();
-	        $(this).parent().addClass("active");
-	        $($(this).attr("data-target")).css("display", "block");
-	        if ($(this).attr("data-target") == "#timeline") {
-	        	changeHeight();
-	        }
-	        var sibling = $($(this).parent().siblings()[0]);
-	        sibling.removeClass("active");
-	        $($(sibling.find("a")[0]).attr("data-target")).css("display", "none");
-
-	    });
-	    function changeHeight() {
-	    	var sHeight = document.getElementById("timeline").scrollHeight * 0.97;
-	    	$('<style>#timeline:before{height:'+sHeight+'px}</style>').appendTo('head');
-	    }
-	    var order=1;
-	    $("#add").click(function(e){
-	    	e.preventDefault();
-	    	order++;
-	    	createData(order);
-	    });
-	    function createData(num) {
-	    	$($("#data-field").children()[$("#data-field").children().length-1]).after($("<div class='data-block'><span class='order fa-stack'> <i class='fa fa-circle-thin fa-stack-2x'></i> <i class='fa fa-stack-1x'>"+num+"</i> </span> <div class='column'> <input class='btn btn-default' editable='false' readonly='on' placeholder='Data Type' onclick='chooseDataType(this)''> <i class='fa fa-folder-open'></i> </div></div>"));
-		}
-		$("#export li").click(function(e){
-			if($(this).className==null) {
-				var prev = $($(this).parent().find(".active"));
-				prev.removeClass("active")
-				$(this).addClass("active");
-			}
-			showExportSetting(prev.html().toLowerCase(), $(this).html().toLowerCase());
-		});
-		function showExportSetting(prev, type) {
-			$("#"+prev).css("display", "none");
-			$("#"+type).css("display", "block");
-		}
-
-		$(".timeline-block .view").click(function(e){
-			e.preventDefault();
-			var id = $(this).attr("data-target");
-			viewDataSet(id);
-		});
-		function viewDataSet(id) {
-			var dataset = ("<div class='data-set'><h3>This is data-set No."+id+"</h3><p>content of this data-set.</p></div>")
-			$("#preview").html(dataset);
-		}
-	});
-</script>
 
 </body>
 </html>
