--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	
+	<link rel="stylesheet" type="text/css" href="css/loginstyle.css">
+	<link href="css/docs.css" rel="stylesheet" >
+	<link href="css/bootstrap.css" rel="stylesheet">
+
 	<link rel='stylesheet' href='css/bootstrap-social.css'>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="css/tabcontent.css" rel="stylesheet" type="text/css">
@@ -20,6 +25,31 @@
 	  ga('create', 'UA-61563497-1', 'auto');
 	  ga('send', 'pageview');
 	</script>
+
+<!-- log in windom -->
+	<div id ="element_to_pop_up">
+        <div id="logindiv">
+          <h1 id='loginh1'>Log in to Datagopro</h1>
+          <div id='logform'>
+            <span> Please log in via <br> </span>
+            <a class="btn btn-block btn-social btn-facebook" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-facebook']);">
+            <i class="fa fa-facebook"></i> Sign in with Facebook
+            </a>
+
+            <a class="btn btn-block btn-social btn-google-plus" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-google-plus']);">
+            <i class="fa fa-google-plus"></i> Sign in with Google
+            </a>
+          
+            <a class="btn btn-block btn-social btn-twitter" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-twitter']);">
+            <i class="fa fa-twitter"></i> Sign in with Twitter
+            </a>
+          </div>
+      </div>
+      <div id='triangle'></div>
+      <div id="continue"><a href='#' id='logclose'>continue without log in</a></div>
+    </div>
+<!-- log in windom -->
+
 	<div id='banner'>
 		<img src="img/logo2.png">
 		<ol id="nav" class="breadcrumb">
@@ -27,7 +57,7 @@
 		  <li><a data-target="#timeline">My Input</a></li>
 		  <li><a data-target="#popular">Popular Input</a></li>
 		  <li><a data-target="#help">Help</a></li>
-		  <li><a data-target="#loginwindow">Login</a><li>
+		  <li><a id="mybutton">Login</a><li>
 		</ol> 
 	</div>
 	<div id="mainbody">
@@ -299,10 +329,13 @@
 	</div>
 	<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.bpopup.min.js"></script>
 	<script type="text/javascript" src="js/layout.js"></script>
 	<script src='js/popup.js'></script>
 	<script src='js/popupController.js'></script>
 	<script src="js/tabcontent.js" type="text/javascript"></script>
+	<script src='js/login.js'></script>
+
 
 </body>
 </html>
