--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script src="js/jquery.bpopup.min.js"></script>
 	<script type="text/javascript" src="js/layout.js"></script>
-	<script src='js/popup.js'></script>
 	<script src='js/popupController.js'></script>
+	<script src='js/inputInfo.js'></script>
 	<script src="js/tabcontent.js" type="text/javascript"></script>
 	<script src='js/login.js'></script>
 
