test facebook login

--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
           <h1 id='loginh1'>Log in to Datagopro</h1>
           <div id='logform'>
             <span> Please log in via <br> </span>
-            <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false">
-            	<a class="btn btn-block btn-social btn-facebook">
+            
+            <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
+            
+            <a class="btn btn-block btn-social btn-facebook">
             	<i class="fa fa-facebook"></i> Sign in with Facebook
             </a>
-            </div>
-
+		
             <a class="btn btn-block btn-social btn-google-plus" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-google-plus']);">
             <i class="fa fa-google-plus"></i> Sign in with Google
             </a>
