Display user previous input data

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 						<i class="fa fa-question-circle fa-2x" title="[String length] specifies the length of this long string."></i>
 					</div>
 					<div class='col-sm-6'>
-						<select id="charset" class='choosecharset form-control'>
+						<select id="chartype" class='choosecharset form-control'>
 							<option value='' hidden disabled selected>Charset</option>
 							<option value='ascii'>ASCII</option>
 							<option value='unicode'>Unicode</option>
