--- a/index.html
+++ b/index.html
@@ -19,15 +19,24 @@
 	<style></style>
 </head>
 <body>
+	
+	<script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '1567423636871440',
+          xfbml      : true,
+          version    : 'v2.3'
+        });
+      };
 
-	<div id="fb-root"></div>
-	<script>(function(d, s, id) {
-		  var js, fjs = d.getElementsByTagName(s)[0];
-		  if (d.getElementById(id)) return;
-		  js = d.createElement(s); js.id = id;
-		  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=1567423636871440";
-		  fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));
+	(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=1567423636871440";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));
+
 	</script>
 
 	 <script>
@@ -47,9 +56,7 @@
           <div id='logform'>
             <span> Please log in via <br> </span>
             
-            <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
-            
-            <a class="btn btn-block btn-social btn-facebook">
+            <a class="btn btn-block btn-social btn-facebook fb-login-button">
             	<i class="fa fa-facebook"></i> Sign in with Facebook
             </a>
 		
