test with Facebook login

--- a/index.html
+++ b/index.html
@@ -20,15 +20,8 @@
 </head>
 <body>
 	
+	<div id="fb-root"></div>
 	<script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          appId      : '1567423636871440',
-          xfbml      : true,
-          version    : 'v2.3'
-        });
-      };
-
 	(function(d, s, id) {
 	  var js, fjs = d.getElementsByTagName(s)[0];
 	  if (d.getElementById(id)) return;
