--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div id='logform'>
             <span> Please log in via <br> </span>
             
-            <a class="btn btn-block btn-social btn-facebook fb-login-button">
+            <a class="btn btn-block btn-social btn-facebook fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false">
             	<i class="fa fa-facebook"></i> Sign in with Facebook
             </a>
 		
