test with login button

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
           <div id='logform'>
             <span> Please log in via <br> </span>
             
-            <a class="btn btn-block btn-social btn-facebook fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false">
+            <div class="fb-login-button btn btn-block btn-social btn-facebook" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false">
             	<i class="fa fa-facebook"></i> Sign in with Facebook
-            </a>
+            </div>
 		
             <a class="btn btn-block btn-social btn-google-plus" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-google-plus']);">
             <i class="fa fa-google-plus"></i> Sign in with Google
