test again with Facebook

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
           <div id='logform'>
             <span> Please log in via <br> </span>
             
+            <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
+            
             <div class="fb-login-button btn btn-block btn-social btn-facebook" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false">
             	<i class="fa fa-facebook"></i> Sign in with Facebook
             </div>
