--- a/index.html
+++ b/index.html
@@ -19,18 +19,8 @@
 	<style></style>
 </head>
 <body>
-	
-	<div id="fb-root"></div>
-	<script>
-	(function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0];
-	  if (d.getElementById(id)) return;
-	  js = d.createElement(s); js.id = id;
-	  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=1567423636871440";
-	  fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));
 
-	</script>
+	<div id="fb-root"> </div>
 
 	<script type="text/javascript">
 	  (function() {
@@ -38,7 +28,17 @@
 	    po.src = 'https://apis.google.com/js/plusone.js?onload=OnLoadCallback';
 	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
 	  })();
+	  	
+	  	function signinCallback(authResult) {
+  			if (authResult['access_token']) {	
+    		document.getElementById('signinButton').setAttribute('style', 'display: none');
+	  } else if (authResult['error']) {
+	    console.log('somthing is wrong：' + authResult['error']);
+	  }
+	}
 	</script>
+
+
 
 	 <script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -57,10 +57,8 @@
           <div id='logform'>
             <span id='logintext'> Please log in via <br> </span>
             
-            <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false">
-            </div>
 
-            <div class="fb-login-button btn btn-block btn-social btn-facebook">
+            <div class=" btn btn-block btn-social btn-facebook" onclick="fb_login()">
             	 <i class="fa fa-facebook"></i> <span>Sign in with Facebook</span>
             </div>
 		
