--- a/index.html
+++ b/index.html
@@ -25,7 +25,59 @@
 </head>
 <body>
 
-	<div id="fb-root"> </div>
+
+	<div id="fb-root"></div>
+	<script type="text/javascript">
+
+	window.fbAsyncInit = function() {
+	    FB.init({
+	        appId   : '1567423636871440',
+	        oauth   : true,
+	        status  : true, // check login status
+	        cookie  : true, // enable cookies to allow the server to access the session
+	        xfbml   : true, // parse XFBML
+	        version    : 'v2.3'
+	    }); };
+
+	    (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+
+    function fb_login(){
+    FB.login(function(response) {
+
+        if (response.authResponse) {
+            console.log('Welcome!  Fetching your information.... ');
+            //console.log(response); // dump complete info
+            access_token = response.authResponse.accessToken; //get access token
+            user_id = response.authResponse.userID; //get FB UID
+
+            FB.api('/me', function(response) {
+                user_email = response.email; //get user email
+          // you can store this data into your database             
+            });
+
+        } else {
+            //user hit cancel button
+            console.log('User cancelled login or did not fully authorize.');
+
+        }
+        }, {
+        scope: 'publish_stream,email'
+      });
+    }   
+    
+    (function() {
+        var e = document.createElement('script');
+        e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
+        e.async = true;
+        $('#fb-root').append(e);
+    }());
+	</script>
 
 	<script type="text/javascript">
 	  (function() {
