--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				    data-clientid="980224079160-bmsd1d9rpiatcfguc987a32appn6j58k.apps.googleusercontent.com"
 				    data-cookiepolicy="single_host_origin"
 				    data-requestvisibleactions="http://schemas.google.com/AddActivity"
-				    data-scope="https://www.googleapis.com/auth/plus.login">
+				    data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/userinfo.email">
 						Sign in with Google</span>
 				</span>
 			</a>
